# AgentTower

./: .gitignore  .sonarcloud.properties  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  sonar-project.properties
.claude/: dashboard.md  speckit-history.md
.codex/: config.toml
.codex/agents/: pr-review-api-contracts.toml  pr-review-architecture.toml  pr-review-coordinator.toml  pr-review-data-schema.toml  pr-review-maintainability.toml  pr-review-observability.toml  pr-review-performance.toml  pr-review-reliability.toml  pr-review-security.toml  pr-review-testing.toml
.github/workflows/: codex-pr-review.yml  notebooklm-sync-check.yml  sonarqube.yml
.notebooklm/: sources.json
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  gemini.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/shell/: ct.zsh  select-worktree.sh  worktrees.sh
.specify/workflows/: workflow-registry.json
apps/control_panel/: .gitignore  README.md  analysis_options.yaml  build.yaml  l10n.yaml  pubspec.yaml
docs/: app-contract-client-guide.md  architecture.md  managed-sessions-quickstart-walkthrough.md  managed-sessions.md  mvp-feature-sequence.md  mvp-test-plans.md  product-requirements.md  product-sections-and-control-panel.md  v2-container-daemon-prd.md
examples/launch_commands/: bash-placeholder.example.yaml
examples/managed_templates/: 1m-2s.example.yaml
openspec/: config.yaml
scripts/: check_notebooklm_sync.py
scripts/smoke/: pybench-mvp-bench.sh
specs/001-package-state-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-host-daemon-socket-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-bench-container-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-container-tmux-pane-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-container-thin-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-agent-registration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-log-attachment-offsets/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-event-ingestion-follow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-safe-prompt-queue/: data-model.md  implement-loop.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-event-routes-arbitration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-app-backend-contract/: CLARIFICATIONS_BATCH.md  NEXT_SESSION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-flutter-control-panel/: T153-manual-validation-runbook.md  clarify-questions-checklist-gaps.md  clarify-questions-f4-f7.md  clarify-questions.md  codex-prompt-spec-quality-pass.md  data-model.md  flutter-testing-plan.md  plan.md  quickstart.md  research.md  spec.md  swarm-review-2026-05-24.md  swarm-review-fix-plan.md  tasks.md  tier-1-fix-instructions.md  upstream-feat011-extension-draft.md
specs/013-managed-session-lifecycle/: clarify-questions.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-app-dashboard-extensions/: clarify-questions-r1.md  clarify-questions-r2.md  clarify-questions-r3.md  clarify-questions.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/agenttower/: __init__.py  cli.py  config.py  daemon.py  paths.py
tests/: __init__.py  conftest.py
(+867 files in other folders)
